Change some stream logic